trunk/Archive2/07/730c676fcebc83/output
main.cpp:2:2: error: invalid preprocessing directive #inlcude
 #inlcude <sstream>
  ^
main.cpp: In function ‘int main()’:
main.cpp:14:47: error: ‘m_version’ was not declared in this scope
  pt.add("License.Unalterable.Signed.Version", m_version);
                                               ^
main.cpp:17:19: error: ‘write_xml’ was not declared in this scope
  write_xml(oss, pt); // error happened on this function
                   ^
